--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -30,9 +30,9 @@
 
 /*--------------------------------------------------------------------- skeleton ---------------------------------------------------------------------*/
 
-* {
+/* * {
      box-sizing: border-box !important;
-}
+} */
 
 section{
     padding:3rem 9%;
@@ -42,9 +42,9 @@ section{
      max-width: 1170px;
 } 
 
-html {
+/* html {
      scroll-behavior: smooth;
-}
+} */
 
 body {
      color: #fff;
@@ -109,13 +109,13 @@ h6 {
      font-size: 13px
 }
 
-*,
+/* *,
 *::after,
 *::before {
      -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
      box-sizing: border-box;
-}
+} */
 
 h1 a,
 h2 a,
@@ -588,7 +588,7 @@ ul.conta_top li a {
 
 /** quality **/
 
-.quality {
+/* .quality {
      padding-top: 90px;
 }
 
@@ -622,7 +622,7 @@ ul.conta_top li a {
 .quality .read_more {
      margin: 0 auto;
      margin-top: 30px !important;
-}
+} */
 
 
 /** end quality **/
@@ -697,7 +697,7 @@ ul.conta_top li a {
 
 /** honey_bg **/
 
-.honey_bg {
+/* .honey_bg {
      margin: 0 auto;
      display: block;
 }
@@ -710,7 +710,7 @@ ul.conta_top li a {
      margin: 0 auto;
      display: block;
 }
-
+ */
 
 /** end honey_bg **/
 
@@ -989,7 +989,7 @@ section{
 }
 
 .heading{
-    background: url("img/abtus.jpg") no-repeat;
+    background: url("images/homeBG.jpg") no-repeat;
     background-size:cover;
     background-position: center;
     text-align: center;
@@ -1089,9 +1089,10 @@ section{
     }
 }
 
+/* for aboutus and so on bckground */
 .home{
     padding-top: 14rem;
-    background: url(img/home-bg1.jpg) no-repeat;
+    background: url(img/homeBG.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     position: relative;
@@ -1117,6 +1118,7 @@ section{
     font-size:2.5rem;
 }
 
+/* havetoCakeLicious */
 .home .slides-container .slide .content h3{
     font-size:6rem;
     color: #222;
