--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -286,7 +286,6 @@ button {
 }
 
 
-/**-- heading section --**/
 
 
 /*---------------------------- preloader area ----------------------------*/
@@ -443,10 +442,6 @@ ul.conta_top li a {
 }
 
 
-/** end header **/
-
-
-/** banner section **/
 
 .slider_main {
      padding-top: 12%;
@@ -540,10 +535,6 @@ ul.conta_top li a {
 }
 
 
-/** end banner section **/
-
-
-/** about section **/
 
 /* .about {
      background: #fff;
@@ -584,9 +575,6 @@ ul.conta_top li a {
 } */
 
 
-/** end about section **/
-
-/** quality **/
 
 .quality {
      padding-top: 90px;
@@ -623,12 +611,6 @@ ul.conta_top li a {
      margin: 0 auto;
      margin-top: 30px !important;
 }
-
-
-/** end quality **/
-
-
-/** contact **/
 
 .contact {
      padding-bottom: 90px;
@@ -692,11 +674,7 @@ ul.conta_top li a {
 }
 
 
-/** end contact **/
 
-
-/** honey_bg **/
-/* 
 .honey_bg {
      margin: 0 auto;
      display: block;
@@ -711,11 +689,7 @@ ul.conta_top li a {
      display: block;
 }
 
- */
-/** end honey_bg **/
 
-
-/** footer **/
 
 .footer {
      padding-top: 120px;
@@ -897,10 +871,6 @@ ul.conta li a:hover {
 }
 
 
-/** end footer **/
-
-
-/**  inner page css **/
 
 .inner_page ul.email {
      margin-top: -3px;
@@ -940,7 +910,7 @@ ul.conta li a:hover {
      padding-top: 90px;
 }
 
-/**  copied code **/
+/  copied code /
 
 :root{
     --brown:#833517;
@@ -989,7 +959,7 @@ section{
 }
 
 .heading{
-    background: url("images/homeBG.jpg") no-repeat;
+    background: url("images/abtus.jpg") no-repeat;
     background-size:cover;
     background-position: center;
     text-align: center;
@@ -1097,7 +1067,7 @@ section{
     background-position: center;
     position: relative;
 }
- .home .s-container .slide{
+ .home .slides-container .slide{
     display:flex;
     align-items: center;
     flex-wrap: wrap;
@@ -1131,14 +1101,14 @@ section{
 }
 
 .home .slides-container .slide .img img{
-    width: 20%;
+    width: 100%;
     animation: fadeUp .4s linear;
 }
 
 .home #next-slide,
 .home #prev-slide{
     position: absolute;
-    top: 10%;
+    top: 50%;
     transform: translateY(-50%);
     height: 5rem;
     width: 5rem;
@@ -1713,7 +1683,7 @@ section{
 
 media queries
 {
-	
+  
 
 @media (max-width: 991px){
     html{
@@ -1783,80 +1753,3 @@ media queries
     }
 } 
 }
-
-
-/**  end copied code **/
-
-/* Add this block at the end of your existing CSS to override previous styles */
-/* .banner-container, .home .slides-container .slide .content, .home .slides-container .slide .img {
-    padding: 0;
-    margin: 0;
-}
-
-.home, .home .s-container, .home .slides-container {
-    padding: 0;
-    margin: 0;
-}
-
-.home .slides-container {
-    margin-top: -2rem; Adjust the value as needed
-}
- */
-/**  number section start **/
-
-/* .number {
-	position: relative;
-	padding: 3rem 9%;
-}
-
-.number .number-row {
-    width: 100%;
-    background: var(--text-color); Adjust as needed
-    display: flex;
-    justify-content: space-around; Ensure items are evenly spaced
-    align-items: center;
-    padding: 2rem 0; Adjust padding as needed
-}
-
-.number-row .num-col {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 1rem;
-    background: var(--main-color); Adjust background as needed
-    border-radius: 0.5rem; Add some rounding to match the design
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1); Add a slight shadow
-}
-
-.number-row .num-col .icon {
-    width: 65px;
-    height: 65px;
-    line-height: 65px;
-    text-align: center;
-    background: #fff; Ensure the icon background is white
-    color: var(--main-color); Adjust icon color
-    border-radius: 50%;
-    margin-bottom: 10px; Add spacing between icon and text
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.number-row .num-col .icon i{
-	font-size: 1.6rem;
-}
-
-.number-row .num-col h4 {
-    font-size: 1.4rem;
-    color: #fff; Ensure header text color is white
-    margin: 0;
-    padding-bottom: 0.5rem; Add spacing below header
-    text-transform: uppercase;
-}
-
-.number-row .num-col span {
-    font-size: 2.4rem;
-    font-weight: bold;
-    color: #fff; Ensure number color is white
-} */
